--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* read-rtl.c (rtx_reader::read_rtx_code): Avoid -Wsign-compare
+	warning.
+
 2017-01-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
 	* config/arm/arm.md (<mcrr>): New.
