--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2017-01-06  Mikael Pettersson  <mikpelinux@gmail.com>
+
+	PR target/57583
+	* config/m68k/m68k.opt (LONG_JUMP_TABLE_OFFSETS): New option.
+	* config/m68k/linux.h (ASM_RETURN_CASE_JUMP): Handle
+	TARGET_LONG_JUMP_TABLE_OFFSETS.
+	* config/m68k/m68kelf.h (ASM_RETURN_CASE_JUMP): Likewise.
+	* config/m68k/netbsd-elf.h (ASM_RETURN_CASE_JUMP): Likewise.
+	* config/m68k/m68k.h (CASE_VECTOR_MODE): Likewise.
+	(ASM_OUTPUT_ADDR_DIFF_ELF): Likewise.
+	* config/m68k/m68k.md (tablejump expander): Likewise.
+	(*tablejump_pcrel_hi): Renamed from unnamed insn, reject
+	TARGET_LONG_JUMP_TABLE_OFFSETS.
+	(*tablejump_pcrel_si): New insn, handle TARGET_LONG_JUMP_TABLE_OFFSETS.
+	* doc/invoke.texi (M68K options): Add -mlong-jump-table-offsets.
+
 2017-01-06  Edgar E. Iglesias <edgar.iglesias@xilinx.com>
 	    David Holsgrove <david.holsgrove@xilinx.com>
 
